--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 section:last-of-type {
